PCHR-1420: PR review fixes

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -103,48 +103,48 @@
             <ng-include ng-show="$ctrl.isLeaveType('sick')" src="pathTpl + 'request-modal/details/sickness.html'"></ng-include>
           </uib-tab>
           <uib-tab heading="Comments">
-            <div class="chr_leave-request-modal__comments-container">
-              <div>
-                <div>
-                  <span>John Doe</span>
+            <div class="chr_leave-request-modal__comments">
+              <div class="chr_leave-request-comment">
+                <div class="chr_leave-request-comment__meta">
+                  <span class="chr_leave-request-comment__author">John Doe</span>
                   <span> - </span>
-                  <span>18/01/2015</span>
+                  <span class="chr_leave-request-comment__date">18/01/2015</span>
                   <button class="btn btn-link">Remove</button>
                 </div>
-                <div class="chr_leave-request-modal__comments-text">
+                <div class="chr_leave-request-comment__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor sagittis mauris in pharetra. Morbi quis congue nisl. Nullam sed mi ligula. Nunc dictum metus ut nisi pulvinar pretium.
                 </div>
               </div>
-              <div>
-                <div>
-                  <span>John Doe</span>
+              <div class="chr_leave-request-comment">
+                <div class="chr_leave-request-comment__meta">
+                  <span class="chr_leave-request-comment__author">John Doe</span>
                   <span> - </span>
-                  <span>18/01/2015</span>
+                  <span class="chr_leave-request-comment__date">18/01/2015</span>
                   <button class="btn btn-link">Remove</button>
                 </div>
-                <div class="chr_leave-request-modal__comments-text">
+                <div class="chr_leave-request-comment__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor sagittis mauris in pharetra. Morbi quis congue nisl. Nullam sed mi ligula. Nunc dictum metus ut nisi pulvinar pretium.
                 </div>
               </div>
-              <div>
-                <div>
-                  <span>John Doe</span>
+              <div class="chr_leave-request-comment">
+                <div class="chr_leave-request-comment__meta">
+                  <span class="chr_leave-request-comment__author">John Doe</span>
                   <span> - </span>
-                  <span>18/01/2015</span>
+                  <span class="chr_leave-request-comment__date">18/01/2015</span>
                   <button class="btn btn-link">Remove</button>
                 </div>
-                <div class="chr_leave-request-modal__comments-text">
+                <div class="chr_leave-request-comment__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor sagittis mauris in pharetra. Morbi quis congue nisl. Nullam sed mi ligula. Nunc dictum metus ut nisi pulvinar pretium.
                 </div>
               </div>
-              <div>
-                <div>
-                  <span>John Doe</span>
+              <div class="chr_leave-request-comment">
+                <div class="chr_leave-request-comment__meta">
+                  <span class="chr_leave-request-comment__author">John Doe</span>
                   <span> - </span>
-                  <span>18/01/2015</span>
+                  <span class="chr_leave-request-comment__date">18/01/2015</span>
                   <button class="btn btn-link">Remove</button>
                 </div>
-                <div class="chr_leave-request-modal__comments-text">
+                <div class="chr_leave-request-comment__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor sagittis mauris in pharetra. Morbi quis congue nisl. Nullam sed mi ligula. Nunc dictum metus ut nisi pulvinar pretium.
                 </div>
               </div>
