PCHR-1387: Add sub controllers for leave request

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
@@ -70,9 +70,9 @@
           <div class="chr_custom-select chr_custom-select--full">
             <select
               name="fromDayTypeSelect"
-              ng-disabled="$ctrl.isMode('view') || $ctrl.leaveRequestFromDayTypes.length === 1"
-              ng-options="dayType.value as dayType.label for dayType in $ctrl.leaveRequestFromDayTypes"
-              ng-model="$ctrl.leaveRequest.from_date_type"
+              ng-disabled="$ctrl.isMode('view') || $ctrl.requestFromDayTypes.length === 1"
+              ng-options="dayType.value as dayType.label for dayType in $ctrl.requestFromDayTypes"
+              ng-model="$ctrl.request.from_date_type"
               ng-change="$ctrl.calculateBalanceChange()">
               <option ng-disabled="$ctrl.isMode('view')" value="">Select</option>
               dayType{{dayType}}
@@ -98,14 +98,14 @@
             show-button-bar="false"
             ng-model="$ctrl.uiOptions.toDate"
             is-open="$ctrl.uiOptions.date.to.show"
-            ng-disabled="$ctrl.isMode('view') || !$ctrl.leaveRequest.from_date"
+            ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date"
             ng-change="$ctrl.updateAbsencePeriodDatesTypes($ctrl.uiOptions.toDate, 'to')"/>
           <span class="input-group-btn">
             <button
               type="button"
               class="btn btn-default fa fa-calendar"
-              ng-disabled="$ctrl.isMode('view') || !$ctrl.leaveRequest.from_date"
-              ng-click="$ctrl.uiOptions.date.to.show = $ctrl.leaveRequest.from_date ? true : false"></button>
+              ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date"
+              ng-click="$ctrl.uiOptions.date.to.show = $ctrl.request.from_date ? true : false"></button>
           </span>
         </div>
         <div ng-show="$ctrl.isLeaveType('toil')" class="input-group">
@@ -132,9 +132,9 @@
           <div class="chr_custom-select chr_custom-select--full">
             <select
               name="toDayTypeSelect"
-              ng-disabled="$ctrl.isMode('view') || $ctrl.leaveRequestToDayTypes.length === 1 || !$ctrl.leaveRequest.from_date"
-              ng-options="dayType.value as dayType.label for dayType in $ctrl.leaveRequestToDayTypes"
-              ng-model="$ctrl.leaveRequest.to_date_type"
+              ng-disabled="$ctrl.isMode('view') || $ctrl.requestToDayTypes.length === 1 || !$ctrl.request.from_date"
+              ng-options="dayType.value as dayType.label for dayType in $ctrl.requestToDayTypes"
+              ng-model="$ctrl.request.to_date_type"
               ng-disabled="$ctrl.isMode('view')"
               ng-change="$ctrl.calculateBalanceChange()">
               <option value="">Select</option>
