--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -24,7 +24,7 @@
             ng-disabled="$ctrl.isMode('view')"
             name="absenceTypeSelect"
             ng-options="absenceType.id as absenceType.title for absenceType in $ctrl.absenceTypes"
-            ng-model="$ctrl.leaveRequest.type_id"
+            ng-model="$ctrl.request.type_id"
             ng-change="$ctrl.updateBalance()"></select>
         </div>
       </div>
@@ -118,15 +118,15 @@
             <div class="chr_custom-select chr_custom-select--full">
               <select
                 name="statusSelect"
-                ng-options="status.value as status.label for status in $ctrl.leaveRequestStatuses"
-                ng-model="$ctrl.leaveRequest.status_id">
+                ng-options="status.value as status.label for status in $ctrl.requestStatuses"
+                ng-model="$ctrl.request.status_id">
                 <option value="">- select -</option>
               </select>
             </div>
           </div>
         </div>
       </div>
-      <div ng-show="$ctrl.leaveRequest.selectedResponse == 3">
+      <div ng-show="$ctrl.request.selectedResponse == 3">
         <div class="col-xs-12">Please add a comment:</div>
         <div class="col-xs-12">
           <div
@@ -134,7 +134,7 @@
             text-angular
             prevent-animations
             ta-toolbar="[['bold','italics','underline']]"
-            ng-model="myleave.leaveRequest.responseComment"></div>
+            ng-model="myleave.request.responseComment"></div>
           <div class="chr_wysiwyg__action">
             <hr/>
             <button class="btn btn-link">
