AI-38: Adjust table cell display

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -29,7 +29,8 @@
             }
 
             &:first-child {
-              display: table-cell;
+              display: table-cell !important;
+              min-width: auto;
             }
 
             &:nth-child(2) {
