--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -18,6 +18,8 @@ $crm-page-topbar-color:        #fff !default;
 $crm-page-topbar-item-padding: 15px !default;
 $crm-accordion-header-color:   #f3f6f7;
 
+$crm-wizard-border:            #eff3f5;
+
 
 //
 // Variables override
