AI-22: Uses -size-base

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_wizard.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_wizard.scss
@@ -15,7 +15,7 @@ ul.wizard-bar {
     padding: 0 20px !important;
     border-radius: 0 !important;
     border: 0 !important;
-    font-size: 13px !important;
+    font-size: $font-size-base !important;
     font-weight: 600;
     color: $gray-darker !important;
     background-color: $crm-white !important;
