--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
@@ -14,6 +14,8 @@
 @import 'vacancies/vacancies';
 @import 'administer/administer';
 @import 'search/search';
+@import "dashboard/dashboard";
+
 
 body,
 %open-sans-font-family {
