PCHR-1805: Open date picker on clicking job role end date field

--- a/com.civicrm.hrjobroles/views/include/add_new_role.html
+++ b/com.civicrm.hrjobroles/views/include/add_new_role.html
@@ -88,7 +88,7 @@
                                                     ng-model="jobroles.edit_data['new_role_id']['newEndDate']"
                                                     ng-change="jobroles.select('newEndDate')"
                                                     ng-disabled="isDisabled"
-                                                    ng-click="open('newEndDate')"
+                                                    ng-click="jobroles.open('newEndDate')"
                                                     close-text="Close">
                                                   <span class="input-group-addon fa fa-calendar"></span>
                                                   <div ng-show="jobroles.errors.newEndDate" style="display: block; color:maroon" role="alert">
