AI-17: Expandable table box shadow

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -248,6 +248,12 @@
       }
 
       #info {
+        box-shadow: $box-shadow;
+
+        tr {
+          border: 0 !important;
+        }
+
         th {
           text-transform: capitalize;
         }
