--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_header.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_header.scss
@@ -98,3 +98,10 @@
     display: none;
   }
 }
+
+.crm-inline-edit-field {
+  .select2-drop,
+  .select2-choice {
+    width: auto !important;
+  }
+}
